Fixed icon/chapter heading spacing

--- a/WoT-compendium/wot.css
+++ b/WoT-compendium/wot.css
@@ -26,7 +26,10 @@ table.header {
   border: 0px;
 }
 
-h3.chapter { padding-left: 40px; }
+h3.chapter {
+    padding-left: 40px;
+    margin-bottom: 0pt;
+}
 img.icon { padding-left: 40px; }
 ol.start { counter-reset: character; }
 ol > li {
